k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-pipeline-svc
  namespace: notification-pipeline
spec:
  selector:
    app: notification-pipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
