k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-pipeline-ingress
  namespace: notification-pipeline
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-pipeline-svc
                port:
                  number: 80
